testdata/baselines/reference/compiler/objectNameCollisionCommonJS(module=commonjs).errors.txt
objectNameCollisionCommonJS.ts(1,5): error TS2441: Duplicate identifier 'Object'. Compiler reserves name 'Object' in top level scope of a module.


==== objectNameCollisionCommonJS.ts (1 errors) ====
    let Object = 0;
        ~~~~~~
!!! error TS2441: Duplicate identifier 'Object'. Compiler reserves name 'Object' in top level scope of a module.
    export const x = 1;
    